kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__destination_hir_lowering_decodes_constant_output.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
state_domains {
  d0 = cursor
  d1 = output
  d2 = memory
}
scopes {
  s0 = lambda_body(@0)
}
lambda @0 @s0 (shape: "const_number", output_size: 4) {
  region @s0 {
    args: [%cs, %os, %s2]
    n1 = Const(0x2a) [] -> [v0]
    n2 = WriteToField(offset=0, W4) [v0, %os:arg] -> [%os]
    results: [%cs:arg, %os:n2, %s2:arg]
  }
}
