kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__destination_hir_lowering_preserves_local_scalar_across_empty_else_if.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
state_domains {
  d0 = cursor
  d1 = output
  d2 = memory
}
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
}
lambda @0 @s0 (shape: "local_across_if", output_size: 4) {
  region @s0 {
    args: [arg0, %cs, %os, %s2]
    n1 = WriteToSlot(0) [arg0, %cs:arg] -> [%cs]
    n2 = Const(0x2) [] -> [v0]
    n3 = WriteToSlot(1) [v0, %cs:n1] -> [%cs]
    n4 = Const(0x0) [] -> [v1]
    n6 = gamma [
      pred: v1
      in0: %cs:n3
      in1: %os:arg
      in2: %s2:arg
    ] {
      branch 0:
        region @s1 {
          args: [%cs, %os, %s2]
          results: [%cs:arg, %os:arg, %s2:arg]
        }
      branch 1:
        region @s2 {
          args: [%cs, %os, %s2]
          n5 = ErrorExit(InvalidBool) [%cs:arg] -> []
          results: [%cs:arg, %os:arg, %s2:arg]
        }
    } -> [%cs, %os, %s2]
    n7 = ReadFromSlot(1) [%cs:n6] -> [v2, %cs]
    n8 = Const(0x4) [] -> [v3]
    n9 = Or [v2, v3] -> [v4]
    n10 = WriteToSlot(1) [v4, %cs:n7] -> [%cs]
    n11 = ReadFromSlot(1) [%cs:n10] -> [v5, %cs]
    n12 = WriteToField(offset=0, W4) [v5, %os:n6] -> [%os]
    results: [%cs:n11, %os:n12, %s2:n6]
  }
}
