kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__scalar_hir_ir_path_lowers_if_else.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
}
lambda @0 @s0 (shape: "abs_diff") {
  region @s0 {
    args: [arg0, arg1, %cs, %os]
    n1 = CmpGt [arg0, arg1] -> [v0]
    n4 = gamma [
      pred: v0
      in0: %cs:arg
      in1: %os:arg
    ] {
      branch 0:
        region @s1 {
          args: [%cs, %os]
          n2 = Sub [arg1, arg0] -> [v1]
          results: [%cs:arg, %os:arg]
        }
      branch 1:
        region @s2 {
          args: [%cs, %os]
          n3 = Sub [arg0, arg1] -> [v2]
          results: [%cs:arg, %os:arg]
        }
    } -> [%cs, %os]
    results: [v2, %cs:n4, %os:n4]
  }
}
