kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__scalar_hir_ir_path_lowers_loop_with_break.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
  s1 = theta_body parent s0
  s2 = gamma_branch(0) parent s1
  s3 = gamma_branch(1) parent s1
  s4 = gamma_branch(0) parent s3
  s5 = gamma_branch(1) parent s3
  s6 = gamma_branch(0) parent s5
  s7 = gamma_branch(1) parent s5
  s8 = gamma_branch(0) parent s1
  s9 = gamma_branch(1) parent s1
}
lambda @0 @s0 (shape: "count_to_five") {
  region @s0 {
    args: [%cs, %os]
    n1 = Const(0x0) [] -> [v0]
    n20 = theta [%cs:arg, %os:arg] {
      region @s1 {
        args: [%cs, %os]
        n2 = Const(0x1) [] -> [v1]
        n3 = WriteToSlot(0) [v1, %cs:arg] -> [%cs]
        n4 = WriteToSlot(1) [v1, %cs:n3] -> [%cs]
        n5 = ReadFromSlot(0) [%cs:n4] -> [v2, %cs]
        n14 = gamma [
          pred: v2
          in0: %cs:n5
          in1: %os:arg
        ] {
          branch 0:
            region @s2 {
              args: [%cs, %os]
              results: [%cs:arg, %os:arg]
            }
          branch 1:
            region @s3 {
              args: [%cs, %os]
              n6 = Const(0x5) [] -> [v3]
              n7 = CmpEq [v0, v3] -> [v4]
              n13 = gamma [
                pred: v4
                in0: %cs:arg
                in1: %os:arg
              ] {
                branch 0:
                  region @s4 {
                    args: [%cs, %os]
                    results: [%cs:arg, %os:arg]
                  }
                branch 1:
                  region @s5 {
                    args: [%cs, %os]
                    n8 = ReadFromSlot(0) [%cs:arg] -> [v5, %cs]
                    n12 = gamma [
                      pred: v5
                      in0: %cs:n8
                      in1: %os:arg
                    ] {
                      branch 0:
                        region @s6 {
                          args: [%cs, %os]
                          results: [%cs:arg, %os:arg]
                        }
                      branch 1:
                        region @s7 {
                          args: [%cs, %os]
                          n9 = Const(0x0) [] -> [v6]
                          n10 = WriteToSlot(0) [v6, %cs:arg] -> [%cs]
                          n11 = WriteToSlot(1) [v6, %cs:n10] -> [%cs]
                          results: [%cs:n11, %os:arg]
                        }
                    } -> [%cs, %os]
                    results: [%cs:n12, %os:n12]
                  }
              } -> [%cs, %os]
              results: [%cs:n13, %os:n13]
            }
        } -> [%cs, %os]
        n15 = ReadFromSlot(0) [%cs:n14] -> [v7, %cs]
        n18 = gamma [
          pred: v7
          in0: %cs:n15
          in1: %os:n14
        ] {
          branch 0:
            region @s8 {
              args: [%cs, %os]
              results: [%cs:arg, %os:arg]
            }
          branch 1:
            region @s9 {
              args: [%cs, %os]
              n16 = Const(0x1) [] -> [v8]
              n17 = Add [v0, v8] -> [v9]
              results: [%cs:arg, %os:arg]
            }
        } -> [%cs, %os]
        n19 = ReadFromSlot(1) [%cs:n18] -> [v10, %cs]
        results: [v10, %cs:n19, %os:n18]
      }
    } -> [%cs, %os]
    results: [v9, %cs:n20, %os:n20]
  }
}
