kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__scalar_hir_ir_path_lowers_match.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
  s3 = gamma_branch(2) parent s0
}
lambda @0 @s0 (shape: "classify") {
  region @s0 {
    args: [%cs, %os]
    n1 = ReadFromSlot(0) [%cs:arg] -> [v0, %cs]
    n8 = gamma [
      pred: v0
      in0: %cs:n1
      in1: %os:arg
    ] {
      branch 0:
        region @s1 {
          args: [%cs, %os]
          n2 = Const(0xa) [] -> [v1]
          n3 = WriteToSlot(1) [v1, %cs:arg] -> [%cs]
          results: [%cs:n3, %os:arg]
        }
      branch 1:
        region @s2 {
          args: [%cs, %os]
          n4 = Const(0xb) [] -> [v2]
          n5 = WriteToSlot(1) [v2, %cs:arg] -> [%cs]
          results: [%cs:n5, %os:arg]
        }
      branch 2:
        region @s3 {
          args: [%cs, %os]
          n6 = Const(0xc) [] -> [v3]
          n7 = WriteToSlot(1) [v3, %cs:arg] -> [%cs]
          results: [%cs:n7, %os:arg]
        }
    } -> [%cs, %os]
    n9 = ReadFromSlot(1) [%cs:n8] -> [v4, %cs]
    results: [v4, %cs:n9, %os:n8]
  }
}
