kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__scalar_hir_ir_path_lowers_struct_field_write.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
}
lambda @0 @s0 (shape: "make_point") {
  region @s0 {
    args: [arg0, arg1, %cs, %os]
    n1 = Const(0x0) [] -> [v0]
    n2 = Add [arg0, arg1] -> [v1]
    results: [v1, %cs:arg, %os:arg]
  }
}
