kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__structural_hir_ir_path_computes_bit_masks.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
state_domains {
  d0 = memory
}
scopes {
  s0 = lambda_body(@0)
}
lambda @0 @s0 (shape: "mask_summary", output_size: 16) {
  region @s0 {
    args: [arg0, %ms]
    n1 = WriteToSlot(0) [arg0, %ms:arg] -> [%ms]
    n2 = Const(0xf) [] -> [v0]
    n3 = WriteToSlot(1) [v0, %ms:n1] -> [%ms]
    n4 = ReadFromSlot(1) [%ms:n3] -> [v1, %ms]
    n5 = Const(0xb) [] -> [v2]
    n6 = And [v1, v2] -> [v3]
    n7 = WriteToSlot(2) [v3, %ms:n4] -> [%ms]
    n8 = ReadFromSlot(2) [%ms:n7] -> [v4, %ms]
    n9 = Const(0x1) [] -> [v5]
    n10 = Shr [v4, v5] -> [v6]
    n11 = WriteToSlot(3) [v6, %ms:n8] -> [%ms]
    n12 = ReadFromSlot(2) [%ms:n11] -> [v7, %ms]
    n13 = Const(0x3) [] -> [v8]
    n14 = Xor [v7, v8] -> [v9]
    n15 = WriteToSlot(4) [v9, %ms:n12] -> [%ms]
    n16 = Const(0x1) [] -> [v10]
    n17 = Const(0x3) [] -> [v11]
    n18 = Shl [v10, v11] -> [v12]
    n19 = Const(0x1) [] -> [v13]
    n20 = Or [v12, v13] -> [v14]
    n21 = WriteToSlot(5) [v14, %ms:n15] -> [%ms]
    n22 = ReadFromSlot(2) [%ms:n21] -> [v15, %ms]
    n23 = WriteToField(offset=0, W4) [v15, %ms:n22] -> [%ms]
    n24 = ReadFromSlot(3) [%ms:n23] -> [v16, %ms]
    n25 = WriteToField(offset=4, W4) [v16, %ms:n24] -> [%ms]
    n26 = ReadFromSlot(4) [%ms:n25] -> [v17, %ms]
    n27 = WriteToField(offset=8, W4) [v17, %ms:n26] -> [%ms]
    n28 = ReadFromSlot(5) [%ms:n27] -> [v18, %ms]
    n29 = WriteToField(offset=12, W4) [v18, %ms:n28] -> [%ms]
    results: [%ms:n29]
  }
}
