kajit/src/compiler/tests/snapshots/kajit__compiler__tests__hir_to_ir__structural_hir_ir_path_decodes_if_and_match.snap
---
source: kajit/src/compiler/tests/hir_to_ir.rs
expression: "format!(\"{}\",\nir.display_with_registry(&crate::ir::IntrinsicRegistry::empty()))"
---
state_domains {
  d0 = cursor
  d1 = output
  d2 = memory
}
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
  s3 = gamma_branch(0) parent s0
  s4 = gamma_branch(1) parent s0
}
lambda @0 @s0 (shape: "branchy_animal", output_size: 8) {
  region @s0 {
    args: [%cs, %os, %s2]
    n1 = Const(0x1) [] -> [v0]
    n2 = WriteToSlot(1) [v0, %cs:arg] -> [%cs]
    n3 = ReadFromSlot(1) [%cs:n2] -> [v1, %cs]
    n8 = gamma [
      pred: v1
      in0: %cs:n3
      in1: %os:arg
      in2: %s2:arg
    ] {
      branch 0:
        region @s1 {
          args: [%cs, %os, %s2]
          n4 = Const(0x0) [] -> [v2]
          n5 = WriteToField(offset=0, W1) [v2, %os:arg] -> [%os]
          results: [%cs:arg, %os:n5, %s2:arg]
        }
      branch 1:
        region @s2 {
          args: [%cs, %os, %s2]
          n6 = Const(0x1) [] -> [v3]
          n7 = WriteToField(offset=0, W1) [v3, %os:arg] -> [%os]
          results: [%cs:arg, %os:n7, %s2:arg]
        }
    } -> [%cs, %os, %s2]
    n9 = Const(0x1) [] -> [v4]
    n10 = WriteToSlot(2) [v4, %cs:n8] -> [%cs]
    n11 = ReadFromSlot(2) [%cs:n10] -> [v5, %cs]
    n16 = gamma [
      pred: v5
      in0: %cs:n11
      in1: %os:n8
      in2: %s2:n8
    ] {
      branch 0:
        region @s3 {
          args: [%cs, %os, %s2]
          n12 = Const(0x7) [] -> [v6]
          n13 = WriteToField(offset=4, W4) [v6, %os:arg] -> [%os]
          results: [%cs:arg, %os:n13, %s2:arg]
        }
      branch 1:
        region @s4 {
          args: [%cs, %os, %s2]
          n14 = Const(0x2a) [] -> [v7]
          n15 = WriteToField(offset=4, W4) [v7, %os:arg] -> [%os]
          results: [%cs:arg, %os:n15, %s2:arg]
        }
    } -> [%cs, %os, %s2]
    results: [%cs:n16, %os:n16, %s2:n16]
  }
}
